--- a/src/CSS_Files/style.css
+++ b/src/CSS_Files/style.css
@@ -1,28 +1,21 @@
-
-#header > h2{
-  /* align-content: center; */
-  /* background-color:coral ; */
+#header>h2 {
+  align-content: center;
   width: 100%;
-  /* text-align: center; */
+  text-align: center;
+  padding: 10px;
+  margin: 0;
 }
 
-body{
-  /* position: absolute;
-  left: 50%;
-  top: 50%; */
+body {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  /* transform: translate(-50%, -50%); */
-  /* width: 40%;
-  height: 50%; */
-  /* margin-right: -50%; */
-  /* width: auto;
-  height: auto; */
 }
 
-#app1,#app2,#app3{
+#app1,
+#app2,
+#app3 {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -30,159 +23,128 @@ body{
   height: auto;
   max-height: 500px;
   padding: 0.5%;
-  border:0.2vw solid gray;
+  border: 0.2vw solid gray;
   font-size: 2vw;
 }
 
 #header {
   position: relative;
-  padding:0.5vw;
-  /* height:10%; */
-  width:auto;
-  /* float: left; */
-  background : linear-gradient(to bottom, coral 60%, white 40%);
+  padding: 0.5vw;
+  width: auto;
+  background: linear-gradient(to bottom, #0077fe 60%, white 40%);
   color: white;
   display: flex;
   flex-wrap: wrap;
-  /* flex-direction: row; */
   justify-content: center;
-  /* align-items: center; */
   font-size: 2vw;
 }
 
-#taskInputField{
+#taskInputField {
   position: relative;
-  /* top: 7%; */
   padding: 2px;
   border: none;
   height: 3vw;
   outline: none;
-  width:80%;
+  width: 80%;
   float: left;
-  border-bottom: 0.3vw solid black;
-  caret-color: coral;
+  border-bottom: 0.3vw solid #3b4455;
+  caret-color: #0077fe;
   font-size: 1.2vw;
 }
 
 #addButton {
   position: relative;
   padding: 1%;
-  /* top: 7%; */
-  left:1%;
+  left: 1%;
   width: 19%;
   height: 3vw;
   background: #999;
-  color: #000;
+  color: #3b4455;
   float: left;
   text-align: center;
   font-size: 1.2vw;
   border: none;
+  cursor: pointer;
 }
 
-#displayArea{
+#displayArea {
   position: relative;
   overflow-y: scroll;
   display: flex;
   flex-direction: column;
   height: 100%;
   min-height: 200px;
-  top:10%;
-  width:98%;
-  padding:1%;
+  top: 10%;
+  width: 98%;
+  padding: 1%;
 }
 
- #footer{
+#footer {
   position: relative;
-  height: auto; /*10% */
-  /* top: 7%; */
-  width: auto;
-  /* float: left; */
-  padding: 1%;
+  height: auto;
+  width: calc(100% - 10px);
+  padding: 5px;
   display: flex;
-  justify-content: space-evenly;
-  /* align-items: center; */
+  justify-content: space-between;
+  align-items: center;
   flex-wrap: nowrap;
   font-size: 0.9vw;
-}  
+}
 
-/* #header{
+#countMessage {
   position: relative;
-  padding:0.5vw;
-  height:10%;
-  width:auto;
-  background : linear-gradient(to bottom, coral 60%, white 40%);
-  color: white;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  font-size: 2vw;
-} */
-
-#countMessage{
-  position: relative;
-  /* top: 30%; */
-  width: 15%;
+  width: 30%;
   font-size: 1.2vw;
 }
 
-#allTaskButton{
-  /* position: relative; */
+#allTaskButton {
   cursor: pointer;
   padding: 1%;
-  width:15%;
+  width: 15%;
   height: 75%;
-  /* top: 20%; */
   background: #bdbcbc;
-  color: #000;
-  /* text-align: center; */
+  color: #3b4455;
   font-size: 0.9vw;
   border: none;
 }
 
-#completedTaskButton{
-  /* position: relative; */
+#completedTaskButton {
   padding: 1%;
-  width:15%;
+  width: 15%;
   height: 75%;
-  /* top: 20%; */
   background: #bdbcbc;
-  color: #000;
-  /* text-align: center; */
+  color: #3b4455;
   font-size: 0.9vw;
   border: none;
 }
 
-#pendingTaskButton{
-  /* position: relative; */
+#pendingTaskButton {
   padding: 1%;
-  width:15%;
+  width: 15%;
   height: 75%;
-  /* top: 20%; */
   background: #bdbcbc;
-  color: #000;
-  /* text-align: center; */
+  color: #3b4455;
   font-size: 0.9vw;
   border: none;
 }
 
-#clearCompleted{
-  /* position: relative; */
+#clearCompleted {
   padding: 1%;
-  width:17%;
+  width: 17%;
   height: 75%;
-  /* top: 20%; */
   background: #bdbcbc;
-  color: #000;
-  /* text-align: center; */
+  color: #3b4455;
   font-size: 0.9vw;
   border: none;
 }
 
-#storageDropDown, #itemsDisplayDropDown {
-  /* position: relative; */
-  width: 8vw;
-  /* height: 2vw; */
-  padding-left: 0.1vh;
+#storageDropDown,
+#itemsDisplayDropDown {
+  position: relative;
+  width: 10vw;
+  height: 5vh;
+  float: right;
+  padding: 0.2vh;
   text-align: center;
   font-size: 0.9vw;
   box-sizing: border-box;
@@ -192,7 +154,7 @@ body{
   -moz-appearance: none;
   border: 0.1vw solid gray;
   border-radius: 10px;
-
+  cursor: pointer;
   background-color: #fff;
   background-position: 90% 50%;
   background-size: 10% 50%;
@@ -200,21 +162,24 @@ body{
 }
 
 #itemsDisplayDropDown {
-  width: 10vw;
+  margin-right: 10px;
 }
 
-/* #storageDropDown:after{
-
-} */
-
-#addButton:hover,#pendingTaskButton:hover,#allTaskButton:hover,#completedTaskButton:hover,#clearCompleted:hover{
-  background-color:rgb(148, 143, 143);
-  color:black;
+#addButton:hover,
+#pendingTaskButton:hover,
+#allTaskButton:hover,
+#completedTaskButton:hover,
+#clearCompleted:hover {
+  background-color: rgb(148, 143, 143);
+  color: #3b4455;
 }
 
-#pendingTaskButton:focus,#allTaskButton:focus,#completedTaskButton:focus,#clearCompleted:focus{
+#pendingTaskButton:focus,
+#allTaskButton:focus,
+#completedTaskButton:focus,
+#clearCompleted:focus {
   background: gray;
-  color:white
+  color: white
 }
 
 ul li {
@@ -238,9 +203,9 @@ ul li:hover {
   background: #ddd;
 }
 
-ul li span.checked + span {
+ul li span.checked+span {
   color: rgb(0, 0, 0);
-  text-decoration : line-through;
+  text-decoration: line-through;
 }
 
 ul li span.checked::before {
@@ -270,7 +235,7 @@ ul li span.checked::before {
 }
 
 #check:hover {
-  background-color: rgb(136, 133, 133,0.3);
+  background-color: rgb(136, 133, 133, 0.3);
 }
 
 #header:after {
@@ -291,10 +256,10 @@ ul li span.checked::before {
   right: 0px;
   top: 1%;
   font-size: 2vw;
+  color: #3b4455;
 }
 
 .close:hover {
   background-color: #f44336;
   color: white;
 }
-
